# aquascope

./: .gitignore  README.md
book-with-questions/: .aquascope-cache  .gitignore  book.toml
book-with-questions/quizzes/: rust-variables.toml
book-with-questions/src/: chapter_1.md
book-with-questions/theme/: index.hbs
book-with-questions/theme/css/: general.css  variables.css
crates/aquascope_cli/: Cargo.toml  README.md
crates/aquascope_cli/src/: main.rs  notes.md
crates/aquascope_cli/tests/: integration.rs
